--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <span>dori</span>
     <span>theory</span>
   </div>
-  <div class="tagline">A theory of threads, woven in style.</div>
+  <div class="tagline">A theory of threads, told through fabric.</div>
 </body>
 </html>
